// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentTypeStepController > constructor > inits option store > derived callback 'with' hint 1`] = `
[
  {
    "label": "Agent public d’une administration centrale (État)",
    "value": "CENTRAL_ADMIN",
  },
  {
    "label": "Agent public d’une administration déconcentrée (État)",
    "value": "DECONCENTRATED_ADMIN",
  },
  {
    "label": "Agent public d’une collectivité territoriale",
    "value": "TERRITORIAL_COLLECTIVITY",
  },
  {
    "label": "Agent public d’un opérateur de l’État",
    "value": "OPERATOR",
  },
  {
    "hint": "Data.Subvention est réservé aux agents publics. Pour toute question, vous pouvez nous contacter à <a href=\\"mailto:contact@datasubvention.beta.gouv.fr\\">contact@datasubvention.beta.gouv.fr</a>",
    "label": "Aucune des propositions ci-dessus",
    "value": "none",
  },
]
`;

exports[`AgentTypeStepController > constructor > inits option store > derived callback 'without' hint 1`] = `
[
  {
    "label": "Agent public d’une administration centrale (État)",
    "value": "CENTRAL_ADMIN",
  },
  {
    "label": "Agent public d’une administration déconcentrée (État)",
    "value": "DECONCENTRATED_ADMIN",
  },
  {
    "label": "Agent public d’une collectivité territoriale",
    "value": "TERRITORIAL_COLLECTIVITY",
  },
  {
    "label": "Agent public d’un opérateur de l’État",
    "value": "OPERATOR",
  },
  {
    "hint": undefined,
    "label": "Aucune des propositions ci-dessus",
    "value": "none",
  },
]
`;
